--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Image Carousel</title>
   </head>
-  <body></body>
+  <body>
+    <div id="carousel-container-div">
+      <div class="frame-div">
+        <div class="slides-div">
+
+          <div class="slide">
+            <img src="./img/bread.jpg" alt="bread">
+          </div>
+
+          <div class="slide">
+            <img src="./img/fruit.jpg" alt="fruit">
+          </div>
+
+          <div class="slide">
+            <img src="./img/meat.jpg" alt="meat">
+          </div>
+
+          <div class="slide">
+            <img src="./img/veg.jpg" alt="veg">
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
