Create and style next and back buttons

--- a/src/template.html
+++ b/src/template.html
@@ -27,6 +27,9 @@
             <img src="./img/veg.jpg" alt="veg">
           </div>
 
+          <button class="back-button"></button>
+          <button class="next-button"></button>
+
         </div>
       </div>
     </div>
