Build and style nav dots

--- a/src/template.html
+++ b/src/template.html
@@ -32,6 +32,12 @@
 
         </div>
       </div>
+      <div id="nav-dot-div">
+        <button class="nav-dot"></button>
+        <button class="nav-dot"></button>
+        <button class="nav-dot"></button>
+        <button class="nav-dot"></button>
+      </div>
     </div>
   </body>
 </html>
